# credproxy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.rst  docker-compose.yaml  opencode.json  pyproject.toml
.opencode/: AGENTS.md  PYTHON.md
credproxy/: __init__.py  __main__.py  app.py  cli.py  config-schema.json  config.py  credentials_handler.py  file_watcher.py  logger.py  metrics.py  routes.py  runner.py  sanitizer.py  settings.py  substitutions.py
docker/: Dockerfile  README.rst  entrypoint.sh  init_secrets.sh
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst
docs/source/configuration/: environment-variables.rst  index.rst  schema-reference.rst  schema_model.rst  security.rst
docs/source/deployment/: advanced-docker-compose.rst  cloudformation.rst  docker-compose.rst  index.rst  socat-proxy.rst
docs/source/development/: changelog.rst  cloudformation.rst  contributing.rst  index.rst
docs/source/installation/: healthcheck.rst  index.rst
docs/source/troubleshooting/: index.rst
tests/: mock_aws.py  test_app.py  test_cli.py  test_config.py  test_credentials_handler.py  test_file_watcher.py  test_integration.py  test_logging.py  test_main.py  test_metrics.py  test_metrics_config.py  test_mock_aws.py  test_regex_filtering.py  test_role_arn_validation.py  test_runner.py  test_sanitizer.py  test_schema_validation.py  test_settings.py  test_substitutions.py  test_utils.py
tooling/cloudformation/: .gitignore  README.md  credproxy-iam-role.yaml  generate-config.py  socat.README.md
tooling/cloudformation/dockerfiles/: go-aws-sdk.Dockerfile  node-aws-sdk.Dockerfile  python-boto3.Dockerfile  socat.Dockerfile
tooling/cloudformation/scripts/: socat.sh  test_aws_sdk.go  test_aws_sdk.js  test_boto3.py
